Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: CmdLine@2
   inputs:
-    script: 'pwsh bin/Debug/netX/playwright.ps1 install'
+    script: 'pwsh bin/Debug/net5.0/playwright.ps1 install'
 - task: VSTest@2
   inputs:
     testSelector: 'testAssemblies'
