Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,9 @@ steps:
   inputs:
     testSelector: 'testAssemblies'
     testAssemblyVer2: |
-      **\*test.dll
+      **\*Tests*.dll
       !**\*TestAdapter.dll
       !**\obj\**
+      !**\bin\**\ref\**
       **\PoC2.dll
     searchFolder: '$(System.DefaultWorkingDirectory)'
