Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,5 @@ steps:
       !**\obj\**
       !**\bin\**\ref\**
       **\PoC2.dll
+    diagnosticsEnabled: True
     searchFolder: '$(System.DefaultWorkingDirectory)'
